--- a/vehiclespares/src/pages/FilterAndProductDisplay/FilterAndProductDisplay.css
+++ b/vehiclespares/src/pages/FilterAndProductDisplay/FilterAndProductDisplay.css
@@ -84,7 +84,7 @@
 .fpd-product__image {
   width: 100%;
   height: 120px;
-  object-fit: contain;
+  object-fit: cover;
   transition: transform 0.3s ease;
 }
 
